--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=495545203"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=195170791" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=364696896" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4256404366"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=510663361" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=416336810" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
@@ -70,7 +70,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <img class="grpelem temp_no_img_src" id="u1837-4" alt="Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada.Sed velit congue viverra. Sed porta mattis luctus." data-orig-src="images/u1837-4.png?crc=99719863" data-hidpi-src="images/u1837-4_2x.png?crc=249470683" data-image-width="915" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
        </div>
       </div>
-      <div class="grpelem shared_content" id="u6178" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u6178_content"><!-- simple frame --></div>
+      <div class="grpelem shared_content" id="u6178" data-content-guid="u6178_content"><!-- simple frame -->
+       <div class="fluid_height_spacer"></div>
+      </div>
      </div>
      <div class="clearfix colelem" id="pu6170"><!-- group -->
       <div class="clearfix grpelem" id="u6170"><!-- group -->
@@ -277,15 +279,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem temp_no_id" data-orig-id="u6170"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u4733_content"><!-- placeholder node --></span>
-     <img class="grpelem temp_no_id temp_no_img_src" alt="Winda Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6110-64.png?crc=3969394586" data-hidpi-src="images/u6110-6_2x4.png?crc=340502727" data-image-width="440" data-orig-id="u6110-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <img class="grpelem temp_no_id temp_no_img_src" alt="Winda Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6110-64.png?crc=4126799423" data-hidpi-src="images/u6110-6_2x4.png?crc=3770281911" data-image-width="517" data-orig-id="u6110-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem temp_no_id" data-orig-id="u6162"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u4829_content"><!-- placeholder node --></span>
-     <img class="grpelem temp_no_id temp_no_img_src" alt="Kominek Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6118-64.png?crc=4000103271" data-hidpi-src="images/u6118-6_2x4.png?crc=4180312929" data-image-width="446" data-orig-id="u6118-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <img class="grpelem temp_no_id temp_no_img_src" alt="Kominek Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6118-64.png?crc=390380620" data-hidpi-src="images/u6118-6_2x4.png?crc=80871345" data-image-width="523" data-orig-id="u6118-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem temp_no_id" data-orig-id="u6154"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u4873_content"><!-- placeholder node --></span>
-     <img class="grpelem temp_no_id temp_no_img_src" alt="Pokryty dach Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6136-64.png?crc=4078226356" data-hidpi-src="images/u6136-6_2x4.png?crc=3812818401" data-image-width="448" data-orig-id="u6136-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <img class="grpelem temp_no_id temp_no_img_src" alt="Pokryty dach Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6136-64.png?crc=449039468" data-hidpi-src="images/u6136-6_2x4.png?crc=4010524375" data-image-width="526" data-orig-id="u6136-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     </div>
     <div class="verticalspacer" data-offset-top="1263" data-content-above-spacer="1263" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
@@ -297,14 +299,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="museBGSize grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
      <div class="PamphletWidget clearfix allow_click_through grpelem temp_no_id" data-visibility="changed" style="visibility:hidden" data-orig-id="pamphletu3472"><!-- none box -->
       <div class="popup_anchor allow_click_through grpelem temp_no_id" data-col-pos="0" data-orig-id="u3477popup">
-       <div class="ContainerGroup clearfix temp_no_id" data-col-pos="0" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="u3477popup" data-orig-id="u3477"><!-- none box -->
-        <div class="Container museBGSize clearfix grpelem temp_no_id" data-col-pos="0" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3483"><!-- group -->
+       <div class="ContainerGroup clearfix temp_no_id" data-col-pos="0" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u3477"><!-- none box -->
+        <div class="Container museBGSize clearfix grpelem temp_no_id" data-col-pos="0" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u3483"><!-- group -->
          <img class="grpelem temp_no_id temp_no_img_src" alt="Ut eget felis Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." width="349" height="253" data-orig-src="images/u3484-65.png?crc=482996019" data-hidpi-src="images/u3484-6_2x5.png?crc=3996451312" data-orig-id="u3484-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
         </div>
-        <div class="Container invi museBGSize clearfix grpelem temp_no_id" data-col-pos="1" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3478"><!-- group -->
+        <div class="Container invi museBGSize clearfix grpelem temp_no_id" data-col-pos="1" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u3478"><!-- group -->
          <img class="grpelem temp_no_id temp_no_img_src" alt="Lorem ipsum Sit amet, consectetur adipiscing elit. Aenean consectetur suscipit viverra. Morbi non arcu blandit justo pellentesque condimentum. Integer dignissim risus quis felis accumsan quis pulvinar tellus fermentum." width="347" height="238" data-orig-src="images/u3479-65.png?crc=4086578573" data-hidpi-src="images/u3479-6_2x5.png?crc=4133537375" data-orig-id="u3479-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
         </div>
-        <div class="Container invi museBGSize clearfix grpelem temp_no_id" data-col-pos="2" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3488"><!-- group -->
+        <div class="Container invi museBGSize clearfix grpelem temp_no_id" data-col-pos="2" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u3488"><!-- group -->
          <img class="grpelem temp_no_id temp_no_img_src" alt="Mauris sit amet Tortor, eget ornare urna. Duis varius tellus eros. Donec odio arcu, rutrum ac rutrum eget, bibendum ac enim. Phasellus hendrerit iacu purus. Aliquam sit amet molestie odio. Sed commodo dictum consequat. " width="349" height="254" data-orig-src="images/u3489-65.png?crc=4110485412" data-hidpi-src="images/u3489-6_2x5.png?crc=522425807" data-orig-id="u3489-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
         </div>
        </div>
@@ -333,15 +335,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem temp_no_id" data-orig-id="u6170"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u4733_content"><!-- placeholder node --></span>
-     <img class="grpelem temp_no_id temp_no_img_src" alt="Winda Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6110-65.png?crc=98215133" data-hidpi-src="images/u6110-6_2x5.png?crc=129082340" data-image-width="284" data-orig-id="u6110-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <img class="grpelem temp_no_id temp_no_img_src" alt="Winda Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6110-65.png?crc=56308681" data-hidpi-src="images/u6110-6_2x5.png?crc=4087224589" data-image-width="325" data-orig-id="u6110-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem temp_no_id" data-orig-id="u6162"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u4829_content"><!-- placeholder node --></span>
-     <img class="grpelem temp_no_id temp_no_img_src" alt="Kominek Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6118-65.png?crc=177612973" data-hidpi-src="images/u6118-6_2x5.png?crc=3829574013" data-image-width="288" data-orig-id="u6118-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <img class="grpelem temp_no_id temp_no_img_src" alt="Kominek Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6118-65.png?crc=467297661" data-hidpi-src="images/u6118-6_2x5.png?crc=525894925" data-image-width="330" data-orig-id="u6118-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem temp_no_id" data-orig-id="u6154"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u4873_content"><!-- placeholder node --></span>
-     <img class="grpelem temp_no_id temp_no_img_src" alt="Pokryty dach Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6136-65.png?crc=4240202094" data-hidpi-src="images/u6136-6_2x5.png?crc=4251591640" data-image-width="290" data-orig-id="u6136-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <img class="grpelem temp_no_id temp_no_img_src" alt="Pokryty dach Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6136-65.png?crc=208472204" data-hidpi-src="images/u6136-6_2x5.png?crc=3759626752" data-image-width="332" data-orig-id="u6136-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     </div>
     <div class="verticalspacer" data-offset-top="1240" data-content-above-spacer="1239" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
@@ -383,21 +385,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u6186"><!-- group -->
       <div class="clearfix grpelem temp_no_id" data-orig-id="u3772"><!-- column -->
-       <img class="colelem temp_no_id temp_no_img_src" alt="Ut eget felis........" data-orig-src="images/u1832-56.png?crc=404198295" data-hidpi-src="images/u1832-5_2x6.png?crc=101870211" data-image-width="126" data-orig-id="u1832-5" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
-       <img class="colelem temp_no_id temp_no_img_src" alt="Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada.Sed velit congue viverra. Sed porta mattis luctus." data-orig-src="images/u1837-46.png?crc=4247401455" data-hidpi-src="images/u1837-4_2x6.png?crc=3830559621" data-image-width="260" data-orig-id="u1837-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+       <img class="colelem temp_no_id temp_no_img_src" alt="Ut eget felis........" data-orig-src="images/u1832-56.png?crc=3873152199" data-hidpi-src="images/u1832-5_2x6.png?crc=4165249310" data-image-width="135" data-orig-id="u1832-5" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+       <img class="colelem temp_no_id temp_no_img_src" alt="Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada.Sed velit congue viverra. Sed porta mattis luctus." data-orig-src="images/u1837-46.png?crc=4011032980" data-hidpi-src="images/u1837-4_2x6.png?crc=270574175" data-image-width="279" data-orig-id="u1837-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u6170"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u4733_content"><!-- placeholder node --></span>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="Winda Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6110-66.png?crc=101918081" data-hidpi-src="images/u6110-6_2x6.png?crc=3981008324" data-image-width="165" data-orig-id="u6110-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+      <img class="grpelem temp_no_id temp_no_img_src" alt="Winda Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6110-66.png?crc=395554173" data-hidpi-src="images/u6110-6_2x6.png?crc=391478425" data-image-width="177" data-orig-id="u6110-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u6162"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u4829_content"><!-- placeholder node --></span>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="Kominek Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6118-66.png?crc=377951474" data-hidpi-src="images/u6118-6_2x6.png?crc=3822874831" data-image-width="161" data-orig-id="u6118-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+      <img class="grpelem temp_no_id temp_no_img_src" alt="Kominek Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6118-66.png?crc=141273327" data-hidpi-src="images/u6118-6_2x6.png?crc=175923881" data-image-width="174" data-orig-id="u6118-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u6154"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u4873_content"><!-- placeholder node --></span>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="Pokryty dach Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6136-66.png?crc=451642535" data-hidpi-src="images/u6136-6_2x6.png?crc=90989571" data-image-width="162" data-orig-id="u6136-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+      <img class="grpelem temp_no_id temp_no_img_src" alt="Pokryty dach Sed velit congue viverra. Sed porta mattis luctus. Curabitur feugiat pharetra sem eu iaculis. Phasellus venenatis volutpat arcu id placerat. Aliquam fringilla ligula eu purus lacinia at volutpat nunc malesuada." data-orig-src="images/u6136-66.png?crc=3878302266" data-hidpi-src="images/u6136-6_2x6.png?crc=238612680" data-image-width="175" data-orig-id="u6136-6" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
      </div>
      <div class="verticalspacer" data-offset-top="1361" data-content-above-spacer="1361" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     </div>
