--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=240887104"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4100761646" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=171341412"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=51672140" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3971599285"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3806523243" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3822199478" id="nomq_pagesheet"/>
   <![endif]-->
     <!--/*
 
@@ -38,8 +38,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MuseLinkActive museBGSize grpelem shared_content" id="u207" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u207_content"><!-- content --></a>
       <div class="clearfix grpelem shared_content" id="u12650" data-content-guid="u12650_content"><!-- group -->
        <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u235-4" href="index.html"><!-- content --><p id="u235-2">START</p></a>
-       <a class="nonblock nontext transition clearfix grpelem" id="u245-4" href="uslugi.html"><!-- content --><p id="u245-2">USŁUGI</p></a>
-       <a class="nonblock nontext transition clearfix grpelem" id="u254-4" href="kontakt.html"><!-- content --><p id="u254-2">KONTAKT</p></a>
+       <a class="nonblock nontext transition clearfix grpelem" id="u245-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u245-2">USŁUGI</p></a>
+       <a class="nonblock nontext transition clearfix grpelem" id="u254-4" href="kontakt-dach-system.html"><!-- content --><p id="u254-2">KONTAKT</p></a>
       </div>
      </div>
      <div class="PamphletWidget clearfix allow_click_through colelem" id="pamphletu3472" data-visibility="changed" style="visibility:hidden"><!-- none box -->
@@ -103,7 +103,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u6136-2"><span id="u6136">Pokryty dach</span></p>
          <p id="u6136-4">Dokładamy wszelkich starań aby efekt finalny był zadowalający przede wszystkim pod względem szczelności ale także wizualnym.</p>
         </div>
-        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17118-4" href="uslugi.html" data-content-guid="u17118-4_content"><!-- content --><p><span id="u17118">CZYTAJ WIĘCEJ</span></p></a>
+        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17118-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17118-4_content"><!-- content --><p><span id="u17118">CZYTAJ WIĘCEJ</span></p></a>
        </div>
       </div>
       <div class="clearfix grpelem shared_content" id="u4831" data-content-guid="u4831_content"><!-- column -->
@@ -114,7 +114,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p id="u6118-2"><span id="u6118">Profesjonalna obróbka</span></p>
         <p id="u6118-4">Posiadamy wykształcenie, narzędzia oraz umiejętności praktyczne do wykonania skomplikowanych dachów papowych. 99% przecieków występuje na obróbkach elementów pionowych na dachu takich jak kominy, attyki i inne.</p>
        </div>
-       <a class="nonblock nontext transition clearfix colelem" id="u17126-4" href="uslugi.html"><!-- content --><p><span id="u17126">CZYTAJ WIĘCEJ</span></p></a>
+       <a class="nonblock nontext transition clearfix colelem" id="u17126-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p><span id="u17126">CZYTAJ WIĘCEJ</span></p></a>
       </div>
       <div class="clearfix grpelem" id="u4673"><!-- column -->
        <div class="position_content" id="u4673_position_content">
@@ -128,13 +128,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u6110-11">-zaginarkę do blach</p>
          <p id="u6110-13">i wiele innych.</p>
         </div>
-        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17144-4" href="uslugi.html" data-content-guid="u17144-4_content"><!-- content --><p><span id="u17144">CZYTAJ WIĘCEJ</span></p></a>
+        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17144-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17144-4_content"><!-- content --><p><span id="u17144">CZYTAJ WIĘCEJ</span></p></a>
        </div>
       </div>
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="2009" data-content-above-spacer="2009" data-content-below-spacer="399" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <a class="nonblock nontext MuseLinkActive museBGSize grpelem shared_content" id="u9946" href="index.html" data-content-guid="u9946_content"><!-- content --><div class="fluid_height_spacer"></div></a>
+    <a class="nonblock nontext MuseLinkActive museBGSize grpelem shared_content" id="u9946" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u9946_content"><!-- content --></a>
     <div class="clearfix grpelem shared_content" id="u12534-21" data-content-guid="u12534-21_content"><!-- content -->
      <p id="u12534-2">ADRES</p>
      <p id="u12534-3">&nbsp;</p>
@@ -157,8 +157,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="colelem shared_content" id="u9948" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-132" data-mu-ie-matrix-dy="132" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u9948_content"><!-- simple frame --></div>
        <div class="colelem shared_content" id="u9947" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-132" data-mu-ie-matrix-dy="132" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u9947_content"><!-- simple frame --></div>
       </div>
-      <a class="nonblock nontext transition clearfix grpelem shared_content" id="u12491-4" href="uslugi.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12491-4_content"><!-- content --><p id="u12491-2">USŁUGI</p></a>
-      <a class="nonblock nontext transition clearfix grpelem shared_content" id="u12492-4" href="kontakt.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12492-4_content"><!-- content --><p id="u12492-2">KONTAKT</p></a>
+      <a class="nonblock nontext transition clearfix grpelem shared_content" id="u12491-4" href="us%c5%82ugi-dach-system.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12491-4_content"><!-- content --><p id="u12491-2">USŁUGI</p></a>
+      <a class="nonblock nontext transition clearfix grpelem shared_content" id="u12492-4" href="kontakt-dach-system.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12492-4_content"><!-- content --><p id="u12492-2">KONTAKT</p></a>
      </div>
     </div>
    </div>
@@ -260,18 +260,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="position_content temp_no_id" data-orig-id="u4875_position_content">
         <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
         <span class="clearfix colelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
-        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17320-4" href="uslugi.html" data-content-guid="u17320-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
+        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17320-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17320-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
        </div>
       </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4831"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4830_content"><!-- placeholder node --></span>
        <span class="clearfix colelem placeholder" data-placeholder-for="u6118-6_content"><!-- placeholder node --></span>
-       <a class="nonblock nontext transition clearfix colelem shared_content" id="u17321-4" href="uslugi.html" data-content-guid="u17321-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
+       <a class="nonblock nontext transition clearfix colelem shared_content" id="u17321-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17321-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
       </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4673"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
        <span class="clearfix colelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
-       <a class="nonblock nontext transition clearfix colelem shared_content" id="u17322-4" href="uslugi.html" data-content-guid="u17322-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
+       <a class="nonblock nontext transition clearfix colelem shared_content" id="u17322-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17322-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
       </div>
      </div>
     </div>
@@ -361,8 +361,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem shared_content" id="u15097" data-content-guid="u15097_content"><!-- group -->
        <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u15098-4" href="index.html"><!-- content --><p id="u15098-2">START</p></a>
-       <a class="nonblock nontext transition clearfix grpelem" id="u15100-4" href="uslugi.html"><!-- content --><p id="u15100-2">USŁUGI</p></a>
-       <a class="nonblock nontext transition clearfix grpelem" id="u15099-4" href="kontakt.html"><!-- content --><p id="u15099-2">KONTAKT</p></a>
+       <a class="nonblock nontext transition clearfix grpelem" id="u15100-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u15100-2">USŁUGI</p></a>
+       <a class="nonblock nontext transition clearfix grpelem" id="u15099-4" href="kontakt-dach-system.html"><!-- content --><p id="u15099-2">KONTAKT</p></a>
       </div>
      </div>
      <div class="PamphletWidget clearfix allow_click_through colelem temp_no_id" data-visibility="changed" style="visibility:hidden" data-orig-id="pamphletu3472"><!-- none box -->
@@ -419,13 +419,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="1200" data-content-above-spacer="1199" data-content-below-spacer="547" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem temp_no_id shared_content" data-orig-id="pu9946" data-content-guid="pu9946_content"><!-- column -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu9946"><!-- column -->
      <span class="nonblock nontext MuseLinkActive museBGSize colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
-     <div class="clearfix colelem" id="u15154"><!-- column -->
+     <div class="clearfix colelem shared_content" id="u15154" data-content-guid="u15154_content"><!-- column -->
       <a class="nonblock nontext MuseLinkActive transition clearfix colelem" id="u15161-4" href="index.html"><!-- content --><p id="u15161-2">START</p></a>
-      <a class="nonblock nontext transition clearfix colelem" id="u15160-4" href="uslugi.html"><!-- content --><p id="u15160-2">USŁUGI</p></a>
-      <a class="nonblock nontext transition clearfix colelem" id="u15159-4" href="kontakt.html"><!-- content --><p id="u15159-2">KONTAKT</p></a>
+      <a class="nonblock nontext transition clearfix colelem" id="u15160-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u15160-2">USŁUGI</p></a>
+      <a class="nonblock nontext transition clearfix colelem" id="u15159-4" href="kontakt-dach-system.html"><!-- content --><p id="u15159-2">KONTAKT</p></a>
      </div>
     </div>
    </div>
@@ -474,13 +474,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4874"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
-       <a class="nonblock nontext transition clearfix colelem" id="u17610-4" href="uslugi.html"><!-- content --><p id="u17610-2">CZYTAJ WIĘCEJ</p></a>
+       <a class="nonblock nontext transition clearfix colelem" id="u17610-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u17610-2">CZYTAJ WIĘCEJ</p></a>
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u4831"><!-- group -->
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4830"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4830_content"><!-- placeholder node --></span>
-       <a class="nonblock nontext transition clearfix colelem" id="u17611-4" href="uslugi.html"><!-- content --><p id="u17611-2">CZYTAJ WIĘCEJ</p></a>
+       <a class="nonblock nontext transition clearfix colelem" id="u17611-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u17611-2">CZYTAJ WIĘCEJ</p></a>
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6118-6_content"><!-- placeholder node --></span>
      </div>
@@ -488,12 +488,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4717"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
-       <a class="nonblock nontext transition clearfix colelem" id="u17612-4" href="uslugi.html"><!-- content --><p id="u17612-2">CZYTAJ WIĘCEJ</p></a>
+       <a class="nonblock nontext transition clearfix colelem" id="u17612-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u17612-2">CZYTAJ WIĘCEJ</p></a>
       </div>
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="1278" data-content-above-spacer="1277" data-content-below-spacer="562" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu9946_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu9946"><!-- column -->
+     <span class="nonblock nontext MuseLinkActive museBGSize colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u15154_content"><!-- placeholder node --></span>
+    </div>
    </div>
   </div>
   <!-- Other scripts -->
