--- a/kontakt-dach-system.html
+++ b/kontakt-dach-system.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "jquery.museresponsive.js", "require.js", "kontakt.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "jquery.museresponsive.js", "require.js", "kontakt-dach-system.css"], "outOfDate":[]};
 </script>
   
-  <title>Kontakt</title>
+  <title>Kontakt Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=240887104"/>
-  <link rel="stylesheet" type="text/css" href="css/kontakt.css?crc=3922707794" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=171341412"/>
+  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=3811653249" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3971599285"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt.css?crc=412729031" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=81121074" id="nomq_pagesheet"/>
   <![endif]-->
     <!--/*
 
@@ -38,8 +38,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext grpelem shared_content" id="u207" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u207_content"><!-- content --></a>
       <div class="clearfix grpelem shared_content" id="u12650" data-content-guid="u12650_content"><!-- group -->
        <a class="nonblock nontext transition clearfix grpelem" id="u235-4" href="index.html"><!-- content --><p id="u235-2">START</p></a>
-       <a class="nonblock nontext transition clearfix grpelem" id="u245-4" href="uslugi.html"><!-- content --><p id="u245-2">USŁUGI</p></a>
-       <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u254-4" href="kontakt.html"><!-- content --><p id="u254-2">KONTAKT</p></a>
+       <a class="nonblock nontext transition clearfix grpelem" id="u245-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u245-2">USŁUGI</p></a>
+       <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u254-4" href="kontakt-dach-system.html"><!-- content --><p id="u254-2">KONTAKT</p></a>
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="pu12072" data-content-guid="pu12072_content"><!-- group -->
@@ -104,7 +104,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="1177" data-content-above-spacer="1177" data-content-below-spacer="399" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <a class="nonblock nontext grpelem shared_content" id="u9946" href="index.html" data-content-guid="u9946_content"><!-- content --><div class="fluid_height_spacer"></div></a>
+    <a class="nonblock nontext grpelem shared_content" id="u9946" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u9946_content"><!-- content --></a>
     <div class="clearfix grpelem shared_content" id="u12534-21" data-content-guid="u12534-21_content"><!-- content -->
      <p id="u12534-2">ADRES</p>
      <p id="u12534-3">&nbsp;</p>
@@ -127,8 +127,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="colelem shared_content" id="u9948" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-132" data-mu-ie-matrix-dy="132" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u9948_content"><!-- simple frame --></div>
        <div class="colelem shared_content" id="u9947" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-132" data-mu-ie-matrix-dy="132" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u9947_content"><!-- simple frame --></div>
       </div>
-      <a class="nonblock nontext transition clearfix grpelem shared_content" id="u12491-4" href="uslugi.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12491-4_content"><!-- content --><p id="u12491-2">USŁUGI</p></a>
-      <a class="nonblock nontext MuseLinkActive transition clearfix grpelem shared_content" id="u12492-4" href="kontakt.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12492-4_content"><!-- content --><p id="u12492-2">KONTAKT</p></a>
+      <a class="nonblock nontext transition clearfix grpelem shared_content" id="u12491-4" href="us%c5%82ugi-dach-system.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12491-4_content"><!-- content --><p id="u12491-2">USŁUGI</p></a>
+      <a class="nonblock nontext MuseLinkActive transition clearfix grpelem shared_content" id="u12492-4" href="kontakt-dach-system.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u12492-4_content"><!-- content --><p id="u12492-2">KONTAKT</p></a>
      </div>
     </div>
    </div>
@@ -300,8 +300,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="nonblock nontext grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem shared_content" id="u15097" data-content-guid="u15097_content"><!-- group -->
        <a class="nonblock nontext transition clearfix grpelem" id="u15098-4" href="index.html"><!-- content --><p id="u15098-2">START</p></a>
-       <a class="nonblock nontext transition clearfix grpelem" id="u15100-4" href="uslugi.html"><!-- content --><p id="u15100-2">USŁUGI</p></a>
-       <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u15099-4" href="kontakt.html"><!-- content --><p id="u15099-2">KONTAKT</p></a>
+       <a class="nonblock nontext transition clearfix grpelem" id="u15100-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u15100-2">USŁUGI</p></a>
+       <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u15099-4" href="kontakt-dach-system.html"><!-- content --><p id="u15099-2">KONTAKT</p></a>
       </div>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
@@ -343,13 +343,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="1194" data-content-above-spacer="1193" data-content-below-spacer="547" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem temp_no_id shared_content" data-orig-id="pu9946" data-content-guid="pu9946_content"><!-- column -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu9946"><!-- column -->
      <span class="nonblock nontext colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
-     <div class="clearfix colelem" id="u15154"><!-- column -->
+     <div class="clearfix colelem shared_content" id="u15154" data-content-guid="u15154_content"><!-- column -->
       <a class="nonblock nontext transition clearfix colelem" id="u15161-4" href="index.html"><!-- content --><p id="u15161-2">START</p></a>
-      <a class="nonblock nontext transition clearfix colelem" id="u15160-4" href="uslugi.html"><!-- content --><p id="u15160-2">USŁUGI</p></a>
-      <a class="nonblock nontext MuseLinkActive transition clearfix colelem" id="u15159-4" href="kontakt.html"><!-- content --><p id="u15159-2">KONTAKT</p></a>
+      <a class="nonblock nontext transition clearfix colelem" id="u15160-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u15160-2">USŁUGI</p></a>
+      <a class="nonblock nontext MuseLinkActive transition clearfix colelem" id="u15159-4" href="kontakt-dach-system.html"><!-- content --><p id="u15159-2">KONTAKT</p></a>
      </div>
     </div>
    </div>
@@ -402,7 +402,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="993" data-content-above-spacer="992" data-content-below-spacer="562" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu9946_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu9946"><!-- column -->
+     <span class="nonblock nontext colelem placeholder" data-placeholder-for="u9946_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u12534-21_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u15154_content"><!-- placeholder node --></span>
+    </div>
    </div>
   </div>
   <!-- Other scripts -->
