--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=434121754"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4218402674" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3922121024" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
@@ -104,9 +104,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u6136-2"><span id="u6136">Pokryty dach</span></p>
          <p id="u6136-4">Dokładamy wszelkich starań aby efekt finalny był zadowalający przede wszystkim pod względem szczelności ale także wizualnym.</p>
         </div>
-        <div class="transition clearfix colelem shared_content" id="u17118-4" data-content-guid="u17118-4_content"><!-- content -->
-         <p><span id="u17118">CZYTAJ WIĘCEJ</span></p>
-        </div>
+        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17118-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17118-4_content"><!-- content --><p><span id="u17118">CZYTAJ WIĘCEJ</span></p></a>
        </div>
       </div>
       <div class="clearfix grpelem shared_content" id="u4831" data-content-guid="u4831_content"><!-- column -->
@@ -117,9 +115,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p id="u6118-2"><span id="u6118">Profesjonalna obróbka</span></p>
         <p id="u6118-4">Posiadamy wykształcenie, narzędzia oraz umiejętności praktyczne do wykonania skomplikowanych dachów papowych. 99% przecieków występuje na obróbkach elementów pionowych na dachu takich jak kominy, attyki i inne.</p>
        </div>
-       <div class="transition clearfix colelem" id="u17126-4"><!-- content -->
-        <p><span id="u17126">CZYTAJ WIĘCEJ</span></p>
-       </div>
+       <a class="nonblock nontext transition clearfix colelem" id="u17126-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p><span id="u17126">CZYTAJ WIĘCEJ</span></p></a>
       </div>
       <div class="clearfix grpelem" id="u4673"><!-- column -->
        <div class="position_content" id="u4673_position_content">
@@ -133,9 +129,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u6110-11">-zaginarkę do blach</p>
          <p id="u6110-13">i wiele innych.</p>
         </div>
-        <div class="transition clearfix colelem shared_content" id="u17144-4" data-content-guid="u17144-4_content"><!-- content -->
-         <p><span id="u17144">CZYTAJ WIĘCEJ</span></p>
-        </div>
+        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17144-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17144-4_content"><!-- content --><p><span id="u17144">CZYTAJ WIĘCEJ</span></p></a>
        </div>
       </div>
      </div>
@@ -215,13 +209,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4875"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
        <span class="clearfix colelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17118-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17118-4_content"><!-- placeholder node --></span>
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u4831_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4673"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
        <span class="clearfix colelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17144-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17144-4_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
@@ -268,24 +262,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="position_content temp_no_id" data-orig-id="u4875_position_content">
         <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
         <span class="clearfix colelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
-        <div class="transition clearfix colelem shared_content" id="u17320-4" data-content-guid="u17320-4_content"><!-- content -->
-         <p>CZYTAJ WIĘCEJ</p>
-        </div>
+        <a class="nonblock nontext transition clearfix colelem shared_content" id="u17320-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17320-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
        </div>
       </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4831"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4830_content"><!-- placeholder node --></span>
        <span class="clearfix colelem placeholder" data-placeholder-for="u6118-6_content"><!-- placeholder node --></span>
-       <div class="transition clearfix colelem shared_content" id="u17321-4" data-content-guid="u17321-4_content"><!-- content -->
-        <p>CZYTAJ WIĘCEJ</p>
-       </div>
+       <a class="nonblock nontext transition clearfix colelem shared_content" id="u17321-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17321-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
       </div>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u4673"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
        <span class="clearfix colelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
-       <div class="transition clearfix colelem shared_content" id="u17322-4" data-content-guid="u17322-4_content"><!-- content -->
-        <p>CZYTAJ WIĘCEJ</p>
-       </div>
+       <a class="nonblock nontext transition clearfix colelem shared_content" id="u17322-4" href="us%c5%82ugi-dach-system.html" data-content-guid="u17322-4_content"><!-- content --><p>CZYTAJ WIĘCEJ</p></a>
       </div>
      </div>
     </div>
@@ -335,13 +323,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem" id="pu4874"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17321-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17321-4_content"><!-- placeholder node --></span>
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u4831"><!-- group -->
       <div class="clearfix grpelem" id="pu4830"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4830_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17322-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17322-4_content"><!-- placeholder node --></span>
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6118-6_content"><!-- placeholder node --></span>
      </div>
@@ -349,7 +337,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem" id="pu4717"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17320-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17320-4_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
@@ -421,19 +409,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4874"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17320-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17320-4_content"><!-- placeholder node --></span>
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u4831"><!-- group -->
       <span class="museBGSize grpelem placeholder" data-placeholder-for="u4830_content"><!-- placeholder node --></span>
-      <span class="transition clearfix grpelem placeholder" data-placeholder-for="u17322-4_content"><!-- placeholder node --></span>
+      <span class="nonblock nontext transition clearfix grpelem placeholder" data-placeholder-for="u17322-4_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6118-6_content"><!-- placeholder node --></span>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u4673"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4717"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
-       <span class="transition clearfix colelem placeholder" data-placeholder-for="u17321-4_content"><!-- placeholder node --></span>
+       <span class="nonblock nontext transition clearfix colelem placeholder" data-placeholder-for="u17321-4_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
@@ -494,17 +482,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6136-6_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4874"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4874_content"><!-- placeholder node --></span>
-       <div class="transition clearfix colelem" id="u17610-4"><!-- content -->
-        <p id="u17610-2">CZYTAJ WIĘCEJ</p>
-       </div>
+       <a class="nonblock nontext transition clearfix colelem" id="u17610-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u17610-2">CZYTAJ WIĘCEJ</p></a>
       </div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u4831"><!-- group -->
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4830"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4830_content"><!-- placeholder node --></span>
-       <div class="transition clearfix colelem" id="u17611-4"><!-- content -->
-        <p id="u17611-2">CZYTAJ WIĘCEJ</p>
-       </div>
+       <a class="nonblock nontext transition clearfix colelem" id="u17611-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u17611-2">CZYTAJ WIĘCEJ</p></a>
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6118-6_content"><!-- placeholder node --></span>
      </div>
@@ -512,9 +496,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u6110-15_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="pu4717"><!-- column -->
        <span class="museBGSize colelem placeholder" data-placeholder-for="u4717_content"><!-- placeholder node --></span>
-       <div class="transition clearfix colelem" id="u17612-4"><!-- content -->
-        <p id="u17612-2">CZYTAJ WIĘCEJ</p>
-       </div>
+       <a class="nonblock nontext transition clearfix colelem" id="u17612-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u17612-2">CZYTAJ WIĘCEJ</p></a>
       </div>
      </div>
     </div>
@@ -544,7 +526,7 @@ Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.popup_anchor.allow_click_through');/* resize height */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#pamphletu3472', ['#bp_infinity', '#bp_1366', '#bp_1024', '#bp_881', '#bp_570', '#bp_320'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'loose',event:'mouseover',deactivationEvent:'none',autoPlay:true,displayInterval:15000,transitionStyle:'fading',transitionDuration:1000,hideAllContentsFirst:false,triggersOnTop:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:15000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); });/* #pamphletu3472 */
+Muse.Utils.initWidget('#pamphletu3472', ['#bp_infinity', '#bp_1366', '#bp_1024', '#bp_881', '#bp_570', '#bp_320'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'loose',event:'mouseover',deactivationEvent:'none',autoPlay:true,displayInterval:7000,transitionStyle:'fading',transitionDuration:1000,hideAllContentsFirst:false,triggersOnTop:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:7000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); });/* #pamphletu3472 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
