--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Start Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=295174005"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4052599550" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3890382999"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=404939584" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4203934673" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=344901681" id="nomq_pagesheet"/>
   <![endif]-->
-    <!--/*
+    <!--custom head HTML-->
+  <style type="text/css"> html,body{ overflow-x:hidden; } </style>
+<style type="text/css"> html,body{ overflow-x:hidden; } </style>
+  <!--/*
 
 */
 -->
