--- a/usługi-dach-system.html
+++ b/usługi-dach-system.html
@@ -17,14 +17,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Usługi Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=295174005"/>
-  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=4012986844" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3890382999"/>
+  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=4248417859" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=217137982"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=56917469" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=4060933159" id="nomq_pagesheet"/>
   <![endif]-->
-    <!--/*
+    <!--custom head HTML-->
+  <style type="text/css"> html,body{ overflow-x:hidden; } </style>
+<style type="text/css"> html,body{ overflow-x:hidden; } </style>
+  <!--/*
 
 */
 -->
